// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HoldingPage should render HoldingPage correctly on gallery page 1`] = `
.c0 {
  margin-top: 15vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 50vh;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    class="c0"
  >
    <p>
      Please return on Easter Saturday to view the entries
    </p>
  </div>
</div>
`;

exports[`HoldingPage should render HoldingPage correctly on voting page 1`] = `
.c0 {
  margin-top: 15vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 50vh;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    class="c0"
  >
    <p>
      Please return on Easter Saturday to cast your votes
    </p>
  </div>
</div>
`;
